--- a/ib/labs/css/style.css
+++ b/ib/labs/css/style.css
@@ -1,36 +1,62 @@
+
 body {
+  font-family: Arial, Helvetica, sans-serif;
   background: rgb(232, 252, 252);
   color: rgb(17, 16, 109);
 }
 h1{
-  color: deeppink;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
+  color: red;
 }
 h2{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
   color: blue;
 }
 h3{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
   color: blueviolet;
+}
+h4{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
 }
 body a{
   color: brown;
 }
-/*
+
 nav a:link{
-  color:rgb(16, 42, 99);
+  color: rgb(23, 49, 199);
 }
 nav a:visited{
-  color: rgb(13, 82, 13);
+  color: rgb(8, 71, 8);
 }
 nav a:hover{
-  color: maroon;
+  color: deeppink;
 }
 nav a:active{
-  color: yellow;
+  color: yellowgreen;
 }
-*/
-nav a{
-  color: green;
+
+p {
+  line-height: 140%;
+  text-indent: 20px;
 }
+
 article p:first-of-type:first-letter{
   color: red;
+}
+p.review-mail{
+  text-align: right;
+}
+p.courses{
+  text-align: center;
+}
+hr {
+  border: none;
+  height: 5px;
+  width: 90%;
+  background-color: red;
 }
