--- a/mozilla/src/css/style.css
+++ b/mozilla/src/css/style.css
@@ -1,18 +1,26 @@
-
+h1{
+  text-align: center;
+}
 a:link{
   color: rgb(16, 16, 83);
+  /*
   border-bottom: 1px dashed;
+  */
 }
 a:visited{
-  color: rgb(58, 12, 102);
+  color: rgb(40, 21, 216);
 }
 a:hover{
   color: rgb(6, 66, 66);
+  /*
   border-bottom: .07em solid;
+  */
 }
 a:active{
-  color: rgb(17, 80, 17);
+  color: yellowgreen;
+  /*
   border-bottom: 1px dashed;
+  */
 }
 
 h2 a{
@@ -20,4 +28,8 @@ h2 a{
 }
 h2 a:hover{
   text-decoration: underline;
+}
+
+p.color-red{
+  color: red;
 }
