--- a/mozilla/src/css/style.css
+++ b/mozilla/src/css/style.css
@@ -2,9 +2,9 @@ body{
   font-family: 'Ubuntu', sans-serif;
   width: 1000px;
   margin: 0 auto;
-  background-color: #f8f0ff;
+  background-color: #e2dcff;
   padding: 0 20px 20px 20px;
-  border: 3px solid #8800ff;
+  border: 3px solid #421de6;
 }
 
 h1{
