--- a/en/css/horizontal-minimalism.css
+++ b/en/css/horizontal-minimalism.css
@@ -5,6 +5,7 @@ h1{
   font-family: 'Roboto', sans-serif;
   font-style: oblique;
   font-weight: 500;
+  color: #2c3e50;
 }
 table, p, h1{
   background: white;
