--- a/mozilla/src/css/style.css
+++ b/mozilla/src/css/style.css
@@ -2,7 +2,7 @@ body{
   font-family: 'Ubuntu', sans-serif;
   width: 1000px;
   margin: 0 auto;
-  background-color: #e2dcff;
+  background-color: #f9f8ff;
   padding: 0 20px 20px 20px;
   border: 3px solid #421de6;
 }
