--- a/expert/html2/mod2/selectors/lab31.css
+++ b/expert/html2/mod2/selectors/lab31.css
@@ -2,12 +2,12 @@ body {
 	background: #FFF;
 	margin: 0;
 }
-/* Верх */
+/* Р’РµСЂС… */
 
-/* Основная часть */
+/* РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ */
 
-/* Основная часть (слева) */
+/* РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ (СЃР»РµРІР°) */
 
-/* Основная часть (справа) */
+/* РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ (СЃРїСЂР°РІР°) */
 
-/* Низ */
+/* РќРёР· */
