--- a/dl/html-lesson3-src/2-div-span/css/styles.css
+++ b/dl/html-lesson3-src/2-div-span/css/styles.css
@@ -1,5 +1,5 @@
 div, span{
-	border: 1px solid #000;
+	border: 1px solid blue;
 	width: 200px;
 	height: 50px;
 }
@@ -7,3 +7,28 @@ div, span{
 /* div{
 	display: inline;
 } */
+
+.menu{
+	width: 200px;
+	list-style: none;
+	background-color: #ccc;
+	padding: 5px 10px;
+	text-align: center;
+}
+.menu li{
+	border-top: 1px solid #ffffff;
+}
+.menu li:first-child{
+	border-top: none;
+}
+.menu a{
+	text-decoration: none;
+	color: inherit;
+	display: block;
+	padding: 5px 0px;
+	transition: background-color 0.5s, color 0.5s;
+}
+.menu a:hover{
+	background: #222;
+	color: #fff;
+}
