--- a/dt/layouts-09/css/style-109.css
+++ b/dt/layouts-09/css/style-109.css
@@ -3,3 +3,37 @@
   margin: 50px auto;
   border: 1px solid black;
 }
+#menu{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  background-color: #484848;
+}
+#menu a{
+  text-decoration: none;
+  margin: 0 5px;
+  padding: 15px 25px;
+  font: bold 14px Arial;
+  color: #ffffff;
+}
+#menu a:hover, #menu a.active{
+  color: #484848;
+  background-color: #ffffff;
+}
+#content{
+  border: 1px solid red;
+  padding: 0 20px 30px;
+}
+#content h1{
+  border: 1px solid red;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+#content p{
+  border: 1px solid red;
+  padding: 0 10px;
+  margin-bottom: 5px;
+  font: 18px/1.3 Arial;
+  text-align: justify;
+}
