--- a/academy/device/device-v1.0/styles/styles.css
+++ b/academy/device/device-v1.0/styles/styles.css
@@ -26,6 +26,58 @@ html {
   height: 100%;
 }
 
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body {
   margin: 0;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #444444;
+  background-color: #ffffff;
+}
+
+.main-header {
+  margin-top: 40px;
+}
+
+.header-container {
+  position: relative;
+  margin: 0 auto;
+  width: 1160px;
+  min-height: 300px;
+  padding-top: 30px;
+  background-color: #ffe17f;
+}
+
+.header-link {
+  position: absolute;
+  left: 60px;
+  top: -21px;
+}
+
+.header-link:hover {
+  opacity: 0.6;
+}
+
+.header-link:active {
+  opacity: 0.3;
+}
+
+.header-link:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
 }
