--- a/academy/example/linear-gradient/style.css
+++ b/academy/example/linear-gradient/style.css
@@ -15,3 +15,9 @@
   height: 100px;
   background-image: linear-gradient(yellow 20%, green 20%, green 70%, yellow 70%);
 }
+
+.colorstop-2 {
+  width: 500px;
+  height: 100px;
+  background-image:  linear-gradient(yellow 33px, green 33px, green 66px, yellow 66px);
+}
